data/derived/sp14/progs/unify/prog0344.ml.out
Characters 93-95:
  | Average (x', y') -> (eval x'+ eval y')/2;;
                              ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
